--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,7 +3,7 @@ name: Publish to Dockerhub
 on:
   push:
     tags:
-      - '*'
+      - "*"
 
 jobs:
   docker:
@@ -29,7 +29,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64,linux/arm64, linux/arm/v7
+          platforms: linux/amd64,linux/arm64, linux/arm64/v8
           push: true
           tags: |
             ${{ env.REPO_NAME }}:${{  github.ref_name }}
