--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64,linux/arm64, linux/arm64/v8
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ${{ env.REPO_NAME }}:${{  github.ref_name }}
